# citadel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
citadel/: advisor.py  cli.py  models.py  scoring.py
citadel/scanners/: docker.py
examples/vulnerable-docker/: docker-compose.yml
reports/: advisory.md
tests/: test_advisor.py  test_docker_scanner.py  test_scoring.py
